using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class TagManager : MonoBehaviour
{
    public static string PLAYER_TAG = "Player";
    public static string ENEMY_TAG = "Enemy";
    public static string BULLET_TAG = "Bullet";
    public static string BOSS_TAG = "Boss";
    public static string SHOOTER_ENEMY_TAG = "ShooterEnemy";
    public static string MAIN_MENUE_CHARACTER_TAG = "MainMenueCharater";
    public static string BLOCKING_TAG = "Blocking";


    public static string HORIZONTAL_AXIS = "Horizontal";
    public static string VERTICAL_AXIS = "Vertical";


    public static string FACE_X_ANIMATION_PARAMETER = "FaceX";
    public static string FACE_Y_ANIMATION_PARAMETER = "FaceY";
    public static string SHOOT_ANIMATION_PARAMETER = "Shoot";
    public static string EXPLOSION_ANIMATION_PARAMETER = "Explode";
    public static string WALK_ANIMATION_PARAMETR = "Walk";
    public static string DEATH_ANIMATION_PARAMETER = "Death";
    public static string OPEN_ANIMATION_PARAMETER = "Open";


    public static string BLOCKING_LAYER_MASK = "Blocking";
    public static string PLAYER_WEAPON_NAME = "Gun Sprites";



}
